<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">
            <ImageView
                android:id="@+id/profile_pic_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:gravity="center_vertical"
                android:src="@drawable/defavatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="@drawable/rounded_fg"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewName"
                    android:layout_width="30dp"
                    app:tint="@color/colorPrimary"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_account_circle_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_fullname_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:text="@string/name"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_fullname_textView"
                    android:drawableRight="@drawable/baseline_create_black_24dp"
                    android:background="@drawable/custom_button_background"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditName"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="30dp"
                    app:tint="@color/colorPrimary"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_phone_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_phoneno_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:text="@string/dies"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_dialpad_black_24dp"
                    android:background="@drawable/custom_button_background"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditPhoneNo"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewSurname"
                    android:layout_width="30dp"
                    app:tint="@color/colorPrimary"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_account_box_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_address_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:text="@string/address"

                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_create_black_24dp"
                    android:background="@drawable/custom_button_background"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditAddress"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewPostalCode"
                    android:layout_width="30dp"
                    app:tint="@color/colorPrimary"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_account_box_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_postalcode_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:text="@string/postal_code"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_create_black_24dp"
                    android:background="@drawable/custom_button_background"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditPostalCode"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewMail"
                    android:layout_width="30dp"
                    app:tint="@color/colorPrimary"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_email_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/textViewEmailAdress"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorAccent"
                    android:text="@string/mail_address"
                    android:textSize="25sp"/>
            </TableRow>
            <TextView
                android:id="@+id/btn_log_out"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/log_out"
                android:onClick="navigateLogOut"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>